# toy_bundler

./: .gitignore  Cargo.toml  README.md
crates/toy/: Cargo.toml
crates/toy/src/: lib.rs
crates/toy/src/config/: mod.rs
crates/toy/src/context/: mod.rs
crates/toy/src/error/: mod.rs
crates/toy/src/generate/: mod.rs
crates/toy/src/lightningcss/: mod.rs
crates/toy/src/module/: mod.rs  module.rs  module_graph.rs  module_group.rs
crates/toy/src/oxc/: mod.rs
crates/toy/src/plugin/: mod.rs  plugin_container.rs
crates/toy/src/plugins/: mod.rs
crates/toy/src/plugins/css/: deps_visitor.rs  mod.rs
crates/toy/src/plugins/html/: deps_visitor.rs  mod.rs  resources_injector.rs
crates/toy/src/plugins/modules/: mod.rs
crates/toy/src/plugins/resolve/: mod.rs
crates/toy/src/plugins/resources/: mod.rs
crates/toy/src/plugins/runtime/: mod.rs
crates/toy/src/plugins/script/: deps_visitor.rs  esm_visitor.rs  mod.rs  runtime_visitor.rs
crates/toy/src/plugins/script/js-runtime/: module-system.js  module-wrapper.js  resource-wrapper.js
crates/toy/src/resource/: mod.rs  resource.rs  resource_pot.rs
crates/toy/src/utils/: mod.rs
fixtures/basic/: foo.js  index.js
fixtures/css/: foz.js  index.js
fixtures/html/: foz.js
