[package]
name = "toy"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightningcss = { version = "1.0.0-alpha.54", features = [
  "visitor",
  "into_owned",
] }
ouroboros = "0.18.3"
oxc = { version = "0.6.0", features = ["codegen"] }
oxc_resolver = "1.4.0"
petgraph = "0.6.4"
rayon = "1.8.1"
ring = "0.17.7"
swc_common = "0.33.18"
swc_html = "0.135.25"
thiserror = "1.0.56"
